--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,22 @@
-.App {
+li{
+  list-style: none;
+}
+.todoForm{
+  background: skyblue;
+  max-width: 500px;
+  margin: auto;
   text-align: center;
-}
+  /* height: 100vh; */
+  min-height: 100px;
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+input{
+  display: inline-block;
+  padding-left: 20px;
+  padding-right: 20px;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+p{
+  display: inline-block;
+  padding-left: 20px;
+  padding-right: 20px;
 }
